--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,13 @@
 
   <script src="https://js.stripe.com/v3/"></script>
   <script type="text/javascript">
-    const stripe = Stripe('pk_test_51HFgpUK3VICfHfXvz9AtWCG6N0pnW1OtqpX8i38eFj5GR7a7nBFxA7gJ80eZfuGblECGyBkKvYBvDiOpWG26L2ib00Ajr8Ez7e');
+    const stripe = Stripe(
+      'pk_test_51HFgpUK3VICfHfXvz9AtWCG6N0pnW1OtqpX8i38eFj5GR7a7nBFxA7gJ80eZfuGblECGyBkKvYBvDiOpWG26L2ib00Ajr8Ez7e');
     const elements = stripe.elements();
 
   </script>
 
-  <script>
-
-  </script>
+  <!-- <script async defer src="https://apis.google.com/js/api.js"></script> -->
 </body>
 
 </html>
